# gomoku

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  delivery.md  development.md  devices.md  end-to-end.md  manager.md  metrics.md  muzero-walkthrough.md  playing.md  training.md
gomoku_muzero/: __init__.py  package.py  play.py  plot.py  serve.py  train.py
gomoku_muzero/cli/: manager.py  package.py  play.py  plot.py  serve.py  train.py
gomoku_muzero/delivery/: __init__.py  packager.py
gomoku_muzero/game/: __init__.py  env.py
gomoku_muzero/manager/: __init__.py  __main__.py  metrics.py  server.py  storage.py  tools.py  training.py
gomoku_muzero/manager/static/: console.html
gomoku_muzero/model/: __init__.py  checkpoint.py  networks.py
gomoku_muzero/runtime/: __init__.py  device.py  metrics.py
gomoku_muzero/search/: __init__.py  mcts.py
gomoku_muzero/training/: __init__.py  async_pipeline.py  pipeline.py  replay.py  trainer.py
gomoku_muzero/web/: __init__.py  server.py
gomoku_muzero/web/static/: index.html
gomoku_muzero/workflows/: __init__.py  evaluate.py  self_play.py  self_play_actor.py
tests/: test_async_self_play.py  test_checkpoint.py  test_delivery.py  test_device.py  test_env.py  test_evaluate.py  test_manager.py  test_manager_storage.py  test_mcts.py  test_metrics.py  test_networks.py  test_pipeline.py  test_play.py  test_replay.py  test_self_play.py  test_trainer.py  test_web.py
