[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gomoku-muzero"
version = "0.1.0"
description = "A small, educational MuZero implementation for Gomoku"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
metrics = [
    "matplotlib>=3.8",
    "tensorboard>=2.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["gomoku_muzero*"]

[tool.setuptools.package-data]
gomoku_muzero = ["web/static/*.html", "manager/static/*.html"]
